src/styles/search.scss
.search-results {
    display: flex;
    flex-direction: column;
    gap: 16px;
}

.search-result {
    display: flex;
    flex-direction: column;
    gap: 8px;

    border: 1px solid #ebebeb;
    border-radius: 6px;
    box-shadow: 2px 2px 4px 0 rgba(0, 0, 0, 0.2);
    padding: 10px 12px;
    animation: fadeIn 0.5s;

    @keyframes fadeIn {
        0% {
            opacity: 0;
        }

        100% {
            opacity: 1;
        }
    }

    .content-match {
        p {
            margin: 0;
            padding: 0;
        }

        >:not(:last-child) {
            border-bottom: 1px solid #ebebeb;
            margin-bottom: 8px;
            padding-bottom: 8px;
        }
    }
}

.search-input {
    max-width: 512px;
}

